--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,10 +8,6 @@
     <action
         android:id="@+id/goToMainMenu"
         app:destination="@id/MainMenu" />
-
-    /><action
-    android:id="@+id/goTCharacterMoreInfo"
-    app:destination="@id/characterMoreInfo"/>
     <action
         android:id="@+id/goToSettings"
         app:destination="@id/Settings" />
@@ -25,6 +21,9 @@
     <action
         android:id="@+id/goToCharacterView"
         app:destination="@id/CharacterView" />
+    <action
+        android:id="@+id/goToCharacterMoreInfo"
+        app:destination="@id/CharacterMoreInfo"/>
     <action
         android:id="@+id/goToCharacterCreatorPageOne"
         app:destination="@id/CharacterCreatorPageOne" />
@@ -64,6 +63,12 @@
         android:label="@string/third_fragment_label"
         tools:layout="@layout/character_view" >
     </fragment>
+
+    <fragment
+        android:id="@+id/CharacterMoreInfo"
+        android:name="com.example.dnd5emanager.CharacterMoreInfo"
+        android:label="CharacterMoreInfo"
+        tools:layout="@layout/character_more_info" />
 
     <fragment
         android:id="@+id/Data"
@@ -127,9 +132,5 @@
         android:label="Dungeon Master's Player Manager"
         tools:layout="@layout/dm_player_manager" >
     </fragment>
-    <fragment
-        android:id="@+id/characterMoreInfo"
-        android:name="com.example.dnd5emanager.CharacterMoreInfo"
-        android:label="CharacterMoreInfo" />
 
 </navigation>
