--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -571,7 +571,6 @@
         android:id="@+id/character_view_back_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="1dp"
         android:backgroundTint="#00FFFFFF"
         android:padding="0dp"
         android:text="🔙"
@@ -581,13 +580,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/character_view_delete_character"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#00FFFFFF"
+        android:padding="0dp"
+        android:text="🗑️"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintStart_toEndOf="@id/character_view_back_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/characterViewMoreInformation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
         android:backgroundTint="#6998FD"
         android:text="More Information"
         android:textColor="@color/black"
         android:textSize="16sp"
-        tools:layout_editor_absoluteX="196dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
