I fixed Alexis' problem 🔥🔥🔥💯💯💯

--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -606,8 +606,12 @@
         android:id="@+id/toDice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="166dp"
+        android:layout_marginTop="86dp"
+        android:layout_marginEnd="157dp"
         android:text="Dice"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="676dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/abilities_card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
