formated DM_Manger like 5e Companion App. No code yet just text boxes Todo - enable save function; hide text boxes until user asks for them ;
Signed-off-by: Alexis <ambrizlex@gmail.com>

--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -606,12 +606,14 @@
         android:id="@+id/toDice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="166dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="157dp"
+        android:backgroundTint="#6793F1"
         android:text="Dice"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/abilities_card" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.942" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
