--- a/app/src/main/res/layout/character_more_info.xml
+++ b/app/src/main/res/layout/character_more_info.xml
@@ -8,6 +8,32 @@
     android:background="#8193B4"
     tools:context=".CharacterView">
 
+    <Button
+        android:id="@+id/character_more_info_back_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="1dp"
+        android:backgroundTint="#00FFFFFF"
+        android:padding="0dp"
+        android:text="🔙"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/character_more_info_edit"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="1dp"
+        android:backgroundTint="#00FFFFFF"
+        android:padding="0dp"
+        android:text="✏"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/character_more_info_about"
         android:layout_width="match_parent"
@@ -17,19 +43,6 @@
         android:text="About:"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/character_creator_page_two_back_button2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="1dp"
-        android:backgroundTint="#00FFFFFF"
-        android:padding="0dp"
-        android:text="🔙"
-        android:textAlignment="center"
-        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
