--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -437,6 +437,61 @@
         app:layout_constraintTop_toBottomOf="@+id/characterClass">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/initiative_bonus_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/character_view_initiative_bonus_text"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="190dp"
+                android:text="Initiative Bonus"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/character_view_initiative_bonus_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="@id/character_view_initiative_bonus_text"
+                app:layout_constraintStart_toStartOf="@id/character_view_initiative_bonus_text"
+                app:layout_constraintTop_toBottomOf="@id/character_view_initiative_bonus_text" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/movement_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/character_view_movement_text"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="285dp"
+                android:text="Movement"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/character_view_movement_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="@id/character_view_movement_text"
+                app:layout_constraintStart_toStartOf="@id/character_view_movement_text"
+                app:layout_constraintTop_toBottomOf="@id/character_view_movement_text" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/health_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -448,7 +503,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:text="Health:"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -458,7 +513,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
                 android:text="/"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_health_text"
                 app:layout_constraintTop_toTopOf="@id/character_view_health_text" />
 
@@ -467,7 +522,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_current_health"
                 app:layout_constraintTop_toTopOf="@id/character_view_current_health" />
 
@@ -476,7 +531,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_health_divider"
                 app:layout_constraintTop_toTopOf="@id/character_view_health_divider" />
 
@@ -484,12 +539,11 @@
                 android:id="@+id/character_view_add_health"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="10dp"
                 android:backgroundTint="#00000000"
                 android:padding="0dp"
                 android:text="+"
                 android:textColor="#040303"
-                android:textSize="14sp"
+                android:textSize="28sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_subtract_health"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -502,7 +556,7 @@
                 android:padding="0dp"
                 android:text="—"
                 android:textColor="#020101"
-                android:textSize="14sp"
+                android:textSize="28sp"
                 app:layout_constraintStart_toEndOf="@id/character_view_max_health"
                 app:layout_constraintTop_toTopOf="parent" />
 
