--- a/app/src/main/res/layout/dice_roller.xml
+++ b/app/src/main/res/layout/dice_roller.xml
@@ -38,4 +38,52 @@
 
     </ImageView>
 
+    <Button
+        android:id="@+id/sixSide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="6 sided dice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.143"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.818" />
+
+    <Button
+        android:id="@+id/eightSide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="8 sided dice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.818" />
+
+    <Button
+        android:id="@+id/tenSide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10 sided dice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.143"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.96" />
+
+    <Button
+        android:id="@+id/twelveSide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="12 sided dice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.859"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.96" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
