--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -29,9 +29,9 @@
 
         <Button
             android:id="@+id/main_menu_view_data"
-            android:layout_width="341dp"
-            android:layout_height="167dp"
-            android:layout_marginTop="492dp"
+            android:layout_width="337dp"
+            android:layout_height="170dp"
+            android:layout_marginTop="276dp"
             android:backgroundTint="#3B812C"
             android:text="Information 📖"
             android:textAlignment="center"
@@ -39,7 +39,7 @@
             android:textSize="45dp"
             app:cornerRadius="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,23 +57,6 @@
             app:layout_constraintHorizontal_bias="0.616"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/main_menu_view_d_m_menu"
-            android:layout_width="332dp"
-            android:layout_height="183dp"
-            android:backgroundTint="#2B5297"
-            android:text="Dungeon Master Menu 🎲"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="45dp"
-            app:cornerRadius="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.68"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.61" />
 
         <Button
             android:id="@+id/main_menu_settings"
@@ -104,6 +87,22 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/toDice"
+            android:layout_width="343dp"
+            android:layout_height="173dp"
+            android:backgroundTint="#DB8B2B"
+            android:text="DICE"
+            android:textSize="50dp"
+            android:textStyle="bold"
+            app:cornerRadius="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/main_menu_view_data"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
